--- a/package.json
+++ b/package.json
@@ -33,10 +33,14 @@
         "log4js": "^2.5.3",
         "mssql": "^4.1.0",
         "mysql": "^2.15.0",
+        "reflect-metadata": "^0.1.12",
         "squel": "^5.12.1",
         "uuid-with-v6": "^1.1.2"
     },
     "devDependencies": {
+        "@types/mocha": "^5.0.0",
+        "@types/node": "^8.9.5",
+        "@types/reflect-metadata": "^0.1.0",
         "babel-plugin-istanbul": "^4.1.5",
         "chai": "^4.1.2",
         "coveralls": "^3.0.0",
